src/main/kotlin/com/example/APITaller/error/exception/NotAuthorizedException.kt
package com.example.APITaller.error.exception

class NotAuthorizedException(message: String) : RuntimeException("Not Authorized Exception (401). $message") {
}